Add sha256(string) entropy

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,12 @@
                                                 <strong>Card</strong> [A2-9TJQK][CDHS]<br>ahqs9dtc
                                             </label>
                                         </li>
+                                        <li>
+                                            <label>
+                                                <input type="radio" name="entropy-type" value="string">
+                                                <strong>String</strong> sha256<br>sha256(entropy)
+                                            </label>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -1059,8 +1065,8 @@
                     <p>
                         <span>Get the source code from the repository</span>
                         -
-                        <a href="https://github.com/iancoleman/bip39" target="_blank">
-                            https://github.com/iancoleman/bip39
+                        <a href="https://github.com/ancjf/bip39" target="_blank">
+                            https://github.com/ancjf/bip39
                         </a>
                     </p>
 
