Add filecoin support.

--- a/src/index.html
+++ b/src/index.html
@@ -1143,6 +1143,7 @@
         <script src="js/casinocoin-util.js"></script>
         <script src="js/cosmos-util.js"></script>
         <script src="js/eos-util.js"></script>
+        <script src="js/fil-util.js"></script>
         <script src="js/fio-util.js"></script>
         <script src="js/xwc-util.js"></script>
         <script src="js/sjcl-bip39.js"></script>
